# desktop-file-manager

./: '  .gitignore  README.md  package.json  pnpm-lock.yaml
logger/: Cargo.toml
logger/src/: constants.rs  delete_logs.rs  lib.rs  log.rs  log_channel.rs  persist.rs  read_logs.rs
manager_core/: Cargo.toml  README.md
manager_core/src/: app_entry.rs  app_entry_write.rs  app_finder.rs  delete_entry.rs  desktop_file_parser.rs  generate_entry_file_contents.rs  lib.rs  logger.rs
manager_core/src/constants/: location_constants.rs  mod.rs
src/: App.svelte  global.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: file_watcher.rs  main.rs
src/layouts/: PrimaryLayout.svelte
src/lib/: AlignRight.svelte  AppEntryList.svelte
src/lib/AppEntryList/: AppEntryList.svelte
src/modules/: AppEntry.ts
src/pages/: AboutPage.svelte  AddEntryPage.svelte  HelpPage.svelte  IndexPage.svelte  LogsPage.svelte  ViewAppEntryPage.svelte
src/store/: entries_store.ts  log_store.ts  nav_store.ts  store_utils.ts
tui/: Cargo.toml
tui/src/: app.rs  event_handler.rs  main.rs
tui/src/components/: app_list.rs
tui/src/screens/: create_entry_screen.rs  index_page.rs  index_page_store.rs  mod.rs
tui/src/store/: entries_store.rs  mod.rs  nav_store.rs  tui_store.rs
