[package]
name = "manager_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "6.1.1"
expanduser = "1.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8.0"
chrono = "0.4.31"
